[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/Light/light.png" type="Texture" id=1]
[ext_resource path="res://sprites/Environment/Arrow.png" type="Texture" id=2]
[ext_resource path="res://sprites/Environment/JanoBG.png" type="Texture" id=3]
[ext_resource path="res://sprites/Environment/Alert.png" type="Texture" id=4]
[ext_resource path="res://code/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://BlockChooser.tscn" type="PackedScene" id=6]
[ext_resource path="res://Puzzle.tscn" type="PackedScene" id=7]
[ext_resource path="res://CountdownBG.tscn" type="PackedScene" id=8]
[ext_resource path="res://StoryUIMaela.tscn" type="PackedScene" id=9]
[ext_resource path="res://code/Maela.gd" type="Script" id=10]
[ext_resource path="res://FinishedBG.tscn" type="PackedScene" id=11]

[node name="Maela" type="Node2D"]
script = ExtResource( 10 )

[node name="MaelaBG" type="Sprite" parent="."]
position = Vector2( 320, 512 )
texture = ExtResource( 3 )

[node name="Puzzle" parent="." instance=ExtResource( 7 )]

[node name="BlockChooser" parent="." instance=ExtResource( 6 )]

[node name="FinishedBG" parent="." instance=ExtResource( 11 )]

[node name="StoryUI" parent="." instance=ExtResource( 9 )]
margin_right = 1032.0
margin_bottom = 1107.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 512 )
current = true
script = ExtResource( 5 )
shake_amount = 2

[node name="ShakeTimer" type="Timer" parent="Camera2D"]
wait_time = 0.5
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 328, 528 )
texture = ExtResource( 1 )
texture_scale = 7.79

[node name="UnshineTween" type="Tween" parent="Light2D"]

[node name="NextArrow" type="Position2D" parent="."]
visible = false
position = Vector2( 944, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="TextureButton" type="TextureButton" parent="NextArrow"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Alert" type="Sprite" parent="."]
visible = false
position = Vector2( 344, 480 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Alert"]
wait_time = 2.0
one_shot = true

[node name="CountdownBG" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="timeout" from="Camera2D/ShakeTimer" to="Camera2D" method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="Alert/Timer" to="." method="_on_Timer_timeout"]
